--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-code">二楼最后一班每天记得拔电蚊香。
-                            新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li>
-                        <li class="fa-book">9月17日月饼到，记得不要借出9月17日至9月25日的会议室。</li>
+                        <li class="fa-apple">如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，
+                            请值班同学代收，并在登记表上签字。</li>
+                        <li class="fa-arrows">9月13日月饼到，记得不要借出9月13日至9月25日的会议室。</li>
+                        <li class="fa-code">新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li>
+                        <li class="fa-book">二楼最后一班每天记得拔电蚊香。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
                             如果苗苗姐（高苗苗）在就找她，
                             她不在就引导到奖助部。</li>
@@ -433,16 +435,17 @@
                 t="征集滚动字幕~";
                 break;
             case 2:
-                t="9月17日月饼到，<br>注意不要借出会议室。";
+                t="9月13日月饼到，<br>注意不要借出会议室。";
                 break;
             case 3:
                 t="天地交通，乃有行政。";
                 break;
             case 4:
-                t="征集滚动字幕~";
+                t="如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，" +
+                    "                            请值班同学代收，并在登记表上签字。";
                 break;
             case 5:
-                t="9月17日月饼到，<br>注意不要借出会议室。";
+                t="9月13日月饼到，<br>注意不要借出会议室。";
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
