--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="documents/排班表2018-9.pdf" class="image" target="_blank"><img src="images/排班表2018-9.png" alt="" /></a>
+                        <a href="images/排班表2018-9.png" class="image" target="_blank"><img src="images/排班表2018-9.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
-                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦。</p>
+                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦。<a href="documents/排班表2018-9.pdf">点击获取pdf版本。</a> </p>
                         </div>
                     </article>
                     <ul class="feature-icons">
