--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ var _hmt = _hmt || [];
                         <tr>
                             <td>石楠</td>
                             <td>总揽。</td>
-                            <td>一楼办公区靠外侧。</td>
+                            <td>一楼南侧办公区。</td>
                         </tr>
                         <tr>
                             <td>吴映晓</td>
@@ -203,9 +203,9 @@ var _hmt = _hmt || [];
                             <td>一楼屏风后最外面</td>
                         </tr>
                         <tr>
-                            <td>徐勇</td>
-                            <td>武装部负责征兵的老师。</td>
-                            <td>一楼屏风后中间</td>
+                            <td>胡文婷</td>
+                            <td>宣传、线上主管。</td>
+                            <td>中心圆台值班同学左侧</td>
                         </tr>
                         <tr>
                             <td>林津津</td>
@@ -213,22 +213,22 @@ var _hmt = _hmt || [];
                             <td>一楼屏风后最里面</td>
                         </tr>
                         <tr>
-                            <td>王健</td>
+                            <td>邹碧铖</td>
                             <td>一楼辅导员。</td>
                             <td>中心圆台缺口处</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-            </div>
-            <div class="features">
-                <article>
-                    <a href="images/辅导员.jpg" class="image" target="_blank"><img src="images/辅导员.jpg" alt="" /></a>
-                    <div class="inner">
-                        <h4>二楼辅导员位置图</h4>
-                        <p>最新辅导员位置图，有他们的快递记得帮他们放到桌子上哦。</p>
-                    </div>
-                </article>
+                <div class="features">
+                    <article>
+                        <a href="images/辅导员.jpg" class="image" target="_blank"><img src="images/辅导员.jpg" alt="" /></a>
+                        <div class="inner">
+                            <h4>二楼辅导员位置图</h4>
+                            <p>最新辅导员位置图，有他们的快递记得帮他们放到桌子上哦。</p>
+                        </div>
+                    </article>
+                </div>
             </div>
         </section>
 
