--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@ var _hmt = _hmt || [];
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
                             （4）每周一会议室的生活园区借用时间调整到11：30-12：30值班的时候就不要再借出去了。<br>
                             （5）
-                            现在我们部门的抽屉除了投影仪线和遥控外还有投影仪转接头，大家收拾会议室的时候记得把转接头一起回收，老师会不定时检查。还有一个提醒，每一班都要检查会议室的锁门情况，有人借的提前帮开门(特别是老师)，没人借的关上门。<br>
-                            （6）粽子下周一到，13-15号发粽子，下周会议室不再外借</li>
+                            现在我们部门的抽屉除了投影仪线和遥控外还有投影仪转接头，大家收拾会议室的时候记得把转接头一起回收，老师会不定时检查。还有一个提醒，每一班都要检查会议室的锁门情况，有人借的提前帮开门(特别是老师)，没人借的关上门。</li>
                         <li class="fa-bolt">文化小站这里增设了跑步机和划艇机，未来几个月由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
                         <li class="fa-users">助管、助研和助教（三助）单据提交到二楼陈恩桃老师旁边的透明箱里。</li>
                         <li class="fa-code">毕业季，综合部办理的主要五张表单中（离校、退学、休学、延长学制、复学）除了离校，其他四张表单都要综合部开完还款证明之后给孙岩老师盖学生处的章。离校的办理：直接到综合部，综合部可以盖离校手续的章，之后到宿管科办理，别往孙岩老师的地方引导。</li>
