--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
                             如果苗苗姐（高苗苗）在就找她，
                             她不在就引导到奖助部。</li>
                         <li class="fa-users">毕业生登记表需先检查学指委秘书长林立涛盖章，
-                            （盖章找一楼辅导员王健，上午上班，王健学长不在的时候找吴映晓老师。），
+                            盖章找吴映晓老师，
                             一定要先拦住人检查一下，才能去找孙岩老师。
                             在盖章的时候一定要有老师监督。</li>
                     </ul>
