--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var _hmt = _hmt || [];
                     <ul class="feature-icons">
                         <li class="fa-apple">如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，
                             请值班同学代收，并在登记表上签字。</li>
-                        <li class="fa-arrows">9月13日月饼到，记得不要借出9月13日至9月25日的会议室。</li>
+                        <li class="fa-arrows">有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。</li>
                         <li class="fa-code">新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li>
                         <li class="fa-book">二楼最后一班每天记得拔电蚊香。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
@@ -103,10 +103,11 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="images/排班表2018-9.png" class="image" target="_blank"><img src="images/排班表2018-9.png" alt="" /></a>
+                        <a href="images/排班表2018-9-24.png" class="image" target="_blank"><img src="images/排班表2018-9-24.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
-                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦。<a href="documents/排班表2018-9.pdf">点击获取pdf版本。</a> </p>
+                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦。由于后期的考核，老部员要耐心为新部员讲解业务要领，新部员要认真学习哦~<br/>
+                                <a href="documents/排班表2018-9-24.pdf" target="_blank">点击获取pdf版本。</a> </p>
                         </div>
                     </article>
                     <ul class="feature-icons">
@@ -440,10 +441,10 @@ var _hmt = _hmt || [];
                 t="天地交通，乃有行政。";
                 break;
             case 1:
-                t="征集滚动字幕~";
+                t="新学期，新愿景<br/>祝同学们新学期工作愉快~";
                 break;
             case 2:
-                t="9月13日月饼到，<br>注意不要借出会议室。";
+                t="有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。";
                 break;
             case 3:
                 t="天地交通，乃有行政。";
@@ -453,7 +454,7 @@ var _hmt = _hmt || [];
                     "                            请值班同学代收，并在登记表上签字。";
                 break;
             case 5:
-                t="9月13日月饼到，<br>注意不要借出会议室。";
+                t="有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。";
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
