--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var _hmt = _hmt || [];
                     <p>业务介绍</p>
                 </header>
                 <p>1.本网站是行政事务部业务变动，包含临时业务、长期业务、老师介绍和日常疑问等几部分。<br>
-                    2.正常情况下每天都会进行更新，确保实效性。<br>
+                    2.正常情况下每天都会进行更新，确保时效性。<br>
                     3.欢迎大家在使用过程中提出改进的意见和批评，以便更好地接收最新的消息。<br>
                 </p>
                 <!--<p><a href="index.html" target="_blank">点击此处返回首页</a> </p>-->
@@ -107,14 +107,14 @@ var _hmt = _hmt || [];
                         <div class="inner">
                             <h4>排班表</h4>
                             <p>最新排班表,请大家看好自己的班次，不要再迟到哦。由于后期的考核，老部员要耐心为新部员讲解业务要领，新部员要认真学习哦~<br/>
-                                <a href="documents/排班表2018-9-26.pdf" target="_blank">点击获取pdf版本。</a> </p>
+                                <a style="color:#b6e9dc" href="documents/排班表2018-9-26.pdf" target="_blank">点击获取pdf版本。</a> </p>
                         </div>
                     </article>
                     <ul class="feature-icons">
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
                         <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
-                        <li class="fa-coffee">借用场地请遵守：<br>
+                        <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
                             （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给曹政。<br>
                             （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
@@ -169,7 +169,7 @@ var _hmt = _hmt || [];
                             <td>研究生国励奖学金、违纪处分（诚信方面的都归孙岩老师）
                                 <br>
                                 毕业登记表先检查有没有林立涛老师的章然后引导至孙岩老师。<br>
-                                若孙岩老师不在，则从抽屉中拿出章帮对方盖上。</td>
+                                </td>
                             <td>二楼办公区第四位</td>
                         </tr>
                         <tr>
