--- a/index.html
+++ b/index.html
@@ -156,26 +156,41 @@ var _hmt = _hmt || [];
                         </tr>
                         <tr>
                             <td>陈恩桃</td>
-                            <td>勤工助学办公室主任，负责勤工助学类的资助，<br>助研、助管、助教工资单的管理。</td>
+                            <td>勤助部指导老师，勤工助学办公室主任。<br/>
+                                负责勤工助学类的资助，助研、助管、助教工资单的管理，<br/>
+                                学生事务中心勤助团队建设，绿色爱心屋的管理，网站管理。
+                            </td>
                             <td>二楼办公区第二位</td>
                         </tr>
                         <tr>
                             <td>于爱涛</td>
-                            <td>奖助学金的立项和审核。</td>
+                            <td>奖助部指导老师。<br/>
+                                奖助学金的发展规划、统计分析，奖助学金的立项和评审工作，<br/>
+                                创建制奖学金项目的工作推进，受助学生社团的组织与指导。
+                            </td>
                             <td>二楼办公区第三位</td>
                         </tr>
                         <tr>
                             <td>孙岩</td>
-                            <td>研究生国励奖学金、违纪处分（诚信方面的都归孙岩老师）
-                                <br>
-                                毕业登记表先检查有没有林立涛老师的章然后引导至孙岩老师。<br>
-                                </td>
+                            <td>行政部指导老师。<br/>
+                                业务经费管理，违纪学生的处理，<br/>
+                                研究生补助、国家助学金审核发放， 研究生国励奖学金，<br/>
+                                学生临时困难补助发放， 违纪处分（诚信方面工作）。<br/>
+                                毕业登记表先检查有没有林立涛老师的章然后引导至孙岩老师。
+                            </td>
                             <td>二楼办公区第四位</td>
                         </tr>
                         <tr>
                             <td>程茵</td>
-                            <td>无引导业务。</td>
+                            <td>学生事务中心副主任，管理事务中心日常运营。
+                            </td>
                             <td>二楼办公区第五位</td>
+                        </tr>
+                        <tr>
+                            <td>张晓虹</td>
+                            <td>办公用品发放。
+                            </td>
+                            <td>S台末尾</td>
                         </tr>
                         </tbody>
                     </table>
@@ -213,7 +228,7 @@ var _hmt = _hmt || [];
                             <td>一楼屏风后最里面</td>
                         </tr>
                         <tr>
-                            <td>邹碧铖</td>
+                            <td>欧阳鉴锋</td>
                             <td>一楼辅导员。</td>
                             <td>中心圆台缺口处</td>
                         </tr>
@@ -354,7 +369,7 @@ var _hmt = _hmt || [];
             <div class="container">
                 <header class="major">
                     <h3>友情链接</h3>
-                    <p>方便及时转到需要的链接。（日常工作中还需要的网站可以在下一板块里提出意见）</p>
+                    <p>方便及时转到需要的链接。</p>
                 </header>
                 <p><a href="https://www.sjtu.edu.cn/" target="_blank">上海交通大学官网</a></p>
                 <p><a href="http://affairs.sjtu.edu.cn/main.action" target="_blank">上海交通大学学生事务管理系统</a></p>
