--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-apple">如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，
+                        <!-- <li class="fa-apple">如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，
                             请值班同学代收，并在登记表上签字。</li>
                         <li class="fa-arrows">有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。</li>
-                        <li class="fa-code">新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li>
-                        <li class="fa-book">二楼最后一班每天记得拔电蚊香。</li>
+                        <li class="fa-code">新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li> -->
+                        <li class="fa-book">户籍人像迁移在隔壁工商银行</li>
+
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
                             如果苗苗姐（高苗苗）在就找她，
                             她不在就引导到奖助部。</li>
@@ -278,31 +279,29 @@ var _hmt = _hmt || [];
 
                     <!--其他部门业务-->
                     <li class="fa-cubes">其他部门业务
-                        <p>（1）督察组主要是“抓”迟到早退、是否看手机太久、是否用电脑看视频、是否浏览无关网站、桌面是否卫生整洁、电话是否及时接听、是否主动引导、是否漏人。（被抓的同学可以自行补充）
+                        <p>（1）勤助现在周末也上班，时间一样。
                         </p>
-                        <p>（2）勤助现在周末也上班，时间一样。
+                        <p>（2）暂住证、身份证挂失、无犯罪记录：户籍服务。
                         </p>
-                        <p>（3）暂住证、身份证挂失、无犯罪记录：户籍服务。
+                        <p>（3）专利公示和企业借用场地引导就业中心。
                         </p>
-                        <p>（4）专利公示和企业借用场地引导就业中心。
+                        <p>（4）补办学生证副证及火车票磁条去教务处注册与学务中心，行政B楼112。电话咨询34206403转164 张老师。（如果在网上办好了要来学服取的话，直接引去4、5窗口）
                         </p>
-                        <p>（5）补办学生证副证及火车票磁条去教务处注册与学务中心，行政B楼112。电话咨询34206403转164 张老师。（如果在网上办好了要来学服取的话，直接引去4、5窗口）
+                        <p>（5）研究生成绩单打印去陈瑞球楼308或本学院教务办
                         </p>
-                        <p>（6）研究生成绩单打印去陈瑞球楼308或本学院教务办
+                        <p>（6）贵宾楼入住去学术活动中心。
                         </p>
-                        <p>（7）贵宾楼入住去学术活动中心。
+                        <p>（7）交通卡充值去邮局。
                         </p>
-                        <p>（8）交通卡充值去邮局。
+                        <p>（8）临时补助单，在综合部。
                         </p>
-                        <p>（9）临时补助单，在综合部。
+                        <p>（9）宿舍延期和申请病号房去宿舍服务。
                         </p>
-                        <p>（10）宿舍延期和申请病号房去宿舍服务。
-                        </p>
-                        <p>（11）宿舍海报张贴流程:<br>
+                        <p>（10）宿舍海报张贴流程:<br>
                             a.先到学联盖章、留底<br>
                             b.再到生活园区团工委处理
                         </p>
-                        <p>（12）EMS也可以寄国外，如果有外国友人要找DHL，可以引导至邮局。
+                        <p>（11）EMS也可以寄国外，如果有外国友人要找DHL，可以引导至邮局。
                         </p>
                     </li>
 
