--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <!-- <li class="fa-apple">如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，
-                            请值班同学代收，并在登记表上签字。</li>
-                        <li class="fa-arrows">有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。</li>
-                        <li class="fa-code">新的取号机已经投入使用，取号机旁凳子下面的线大家注意保护。</li> -->
                         <li class="fa-book">户籍人像迁移在隔壁工商银行</li>
-
+                        <li class="fa-code">部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
                             如果苗苗姐（高苗苗）在就找她，
                             她不在就引导到奖助部。</li>
@@ -458,17 +454,16 @@ var _hmt = _hmt || [];
                 t="新学期，新愿景<br/>祝同学们新学期工作愉快~";
                 break;
             case 2:
-                t="有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。";
+                t="户籍人像迁移在隔壁工商银行";
                 break;
             case 3:
-                t="天地交通，乃有行政。";
+                t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。";
                 break;
             case 4:
-                t="如果有同学或老师来一楼前台交“助学·筑梦·铸人”的活动报名表，" +
-                    "                            请值班同学代收，并在登记表上签字。";
+                t="户籍人像迁移在隔壁工商银行"
                 break;
             case 5:
-                t="有人来领“一封家书寄相思”奖品，出示邮件或短信完成登记后去二楼13号电脑领取月饼。";
+                t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。"
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
