--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
+
+                        <li class="fa-apple">最新场地负责人已经由曹政变成徐媛媛, 场地相关问题请找她, 晚班记得发截图.</li>
                         <li class="fa-book">户籍人像迁移在隔壁工商银行</li>
                         <li class="fa-code">部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
@@ -112,7 +114,7 @@ var _hmt = _hmt || [];
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
                         <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
                         <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
-                            （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给曹政。<br>
+                            （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。<br>
                             （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
                             （4）每周一会议室的生活园区借用时间调整到11：30-12：30值班的时候就不要再借出去了。<br>
