--- a/index.html
+++ b/index.html
@@ -78,16 +78,10 @@ var _hmt = _hmt || [];
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
 
-                        <li class="fa-apple">最新场地负责人已经由曹政变成徐媛媛, 场地相关问题请找她, 晚班记得发截图.</li>
-                        <li class="fa-book">户籍人像迁移在隔壁工商银行</li>
-                        <li class="fa-code">部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
-                        <li class="fa-bolt">二楼如果有人来问莙政报销的发票，
-                            如果苗苗姐（高苗苗）在就找她，
-                            她不在就引导到奖助部。</li>
-                        <li class="fa-users">毕业生登记表需先检查学指委秘书长林立涛盖章，
-                            盖章找吴映晓老师，
-                            一定要先拦住人检查一下，才能去找孙岩老师。
-                            在盖章的时候一定要有老师监督。</li>
+                        <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛, 场地相关问题请找她, 晚班记得发截图。</li>
+                        <li class="fa-code">部门考核制度已经发布, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
+                        <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
+                        <li class="fa-users">毕业生登记表需先检查学指委秘书长林立涛盖章，盖章找吴映晓老师，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
                     </ul>
                 </header>
             </div>
@@ -117,14 +111,13 @@ var _hmt = _hmt || [];
                             （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。<br>
                             （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
-                            （4）每周一会议室的生活园区借用时间调整到11：30-12：30值班的时候就不要再借出去了。<br>
-                            （5）
-                            现在我们部门的抽屉除了投影仪线和遥控外还有投影仪转接头，大家收拾会议室的时候记得把转接头一起回收，老师会不定时检查。还有一个提醒，每一班都要检查会议室的锁门情况，有人借的提前帮开门(特别是老师)，没人借的关上门。</li>
-                        <li class="fa-bolt">文化小站这里增设了跑步机和划艇机，未来几个月由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
+                            （4）生活园区每周一借用会议室, 时间调整到11：30-12：30, 此时间段不要外借。 <br>
+                            （5）部门抽屉第3层有投影仪线和遥控器，投影仪转接头，收拾会议室记得把转接头一起回收，老师会不定时检查。<br>
+                            （6）每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。</li>
+                        <li class="fa-bolt">文化小站增设了跑步机和划艇机，目前由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
                         <li class="fa-users">助管、助研和助教（三助）单据提交到二楼陈恩桃老师旁边的透明箱里。</li>
                         <li class="fa-code">毕业季，综合部办理的主要五张表单中（离校、退学、休学、延长学制、复学）除了离校，其他四张表单都要综合部开完还款证明之后给孙岩老师盖学生处的章。离校的办理：直接到综合部，综合部可以盖离校手续的章，之后到宿管科办理，别往孙岩老师的地方引导。</li>
-                        <li class="fa-cubes">以后如果有来找老师的，老师不在，就去问一下曾真学长，有些同学可能是从徐汇赶过来的，很不方便，有些章他能解决的就处理掉了。
-                        </li>
+                        <li class="fa-cubes">如果有来找老师但老师不在，可以去问一下曾真学长，有些同学可能是从徐汇赶过来的，很不方便，有些章他能解决的就处理掉了。</li>
                     </ul>
                 </div>
             </div>
