--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-
+                        <li class="fa-envelope">这个星期二楼外场会有贷款签约，如果有人问请引导至二楼外场</li>
+                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦! 账号是学号, 密码是111111, 大家值班时记得先在网上签到哦~, 然后记得在纸质版上同时签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛, 场地相关问题请找她, 晚班记得发截图。</li>
                         <li class="fa-code">部门考核制度已经发布, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
@@ -104,14 +105,16 @@ var _hmt = _hmt || [];
                         </div>
                     </article>
                     <ul class="feature-icons">
+                        <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。具体流程请见部门电脑文件。</li>
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
                         <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
                         <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
+                            （0）现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！
                             （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。<br>
                             （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
-                            （4）生活园区每周一借用会议室, 时间调整到11：30-12：30, 此时间段不要外借。 <br>
+                            （4）生活园区每周一借用一楼会议室, 时间调整到11：30-12：30, 此时间段不要外借。 <br>
                             （5）部门抽屉第3层有投影仪线和遥控器，投影仪转接头，收拾会议室记得把转接头一起回收，老师会不定时检查。<br>
                             （6）每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。</li>
                         <li class="fa-bolt">文化小站增设了跑步机和划艇机，目前由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
@@ -449,13 +452,13 @@ var _hmt = _hmt || [];
                 t="新学期，新愿景<br/>祝同学们新学期工作愉快~";
                 break;
             case 2:
-                t="户籍人像迁移在隔壁工商银行";
+                t="部门网站上线啦!!快去留言吧！";
                 break;
             case 3:
                 t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。";
                 break;
             case 4:
-                t="户籍人像迁移在隔壁工商银行"
+                t="部门网站上线啦!!快去踩踩吧~"
                 break;
             case 5:
                 t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。"
