--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-envelope">这个星期二楼外场会有贷款签约，如果有人问请引导至二楼外场</li>
-                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦! 账号是学号, 密码是111111, 大家值班时记得先在网上签到哦~, 然后记得在纸质版上同时签到。</li>
+                        <li class="fa-envelope">第7周二楼外场会有贷款签约服务，如果有人问询请引导至二楼外场</li>
+                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦! 账号是学号, 密码是111111, 签到请确认连接SSC-SJTU，请不要重复签到, 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛, 场地相关问题请找她, 晚班记得发截图。</li>
                         <li class="fa-code">部门考核制度已经发布, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
-                        <li class="fa-users">毕业生登记表需先检查学指委秘书长林立涛盖章，盖章找吴映晓老师，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
+                        <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
                     </ul>
                 </header>
             </div>
@@ -105,7 +105,12 @@ var _hmt = _hmt || [];
                         </div>
                     </article>
                     <ul class="feature-icons">
-                        <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。具体流程请见部门电脑文件。</li>
+                        <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。<br>
+                                具体流程：<br>
+                            1. 提前拨打电话：13585835264告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
+                            2. 在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！<br>
+                            3. 到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可·。切记一定要先找到曹老师，听从老师安排。<br>
+                        </li>
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
                         <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
