--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ var _hmt = _hmt || [];
                         <tr>
                             <td>石楠</td>
                             <td>总揽。</td>
-                            <td>一楼南侧办公区。</td>
+                            <td>一楼北侧办公区。</td>
                         </tr>
                         <tr>
                             <td>吴映晓</td>
