--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        <li class="fa-envelope">第7周二楼外场会有贷款签约服务，如果有人问询请引导至二楼外场</li>
+                        
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦! 账号是学号, 密码是111111, 签到请确认连接SSC-SJTU，请不要重复签到, 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛, 场地相关问题请找她, 晚班记得发截图。</li>
                         <li class="fa-code">部门考核制度已经发布, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
@@ -105,6 +105,19 @@ var _hmt = _hmt || [];
                         </div>
                     </article>
                     <ul class="feature-icons">
+                        <li class="fa-envelope">物资经费申请表已经更改为四表合一, "工作餐"项目取消。</li>
+                        <li class="fa-code">多媒体教室不再借用，普通教师借用流程不变。</li>
+                        <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
+                        <li class="fa-code">一些部门上下班时间:<br>
+                            爱心屋 8:00-20:00<br>
+                            勤助部 8:30-21:50<br>
+                            学务部 8:30-17:00<br>
+                            就业中心 8:00-17:00<br>
+                            综合部 8:20-20:00<br>
+                            奖助部 8:30-20:50<br>
+                            行政部 8:20-20:20<br>
+                        </li>
+                        <li class="fa-book">
                         <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。<br>
                                 具体流程：<br>
                             1. 提前拨打电话：13585835264告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
@@ -229,7 +242,7 @@ var _hmt = _hmt || [];
                         </tr>
                         <tr>
                             <td>欧阳鉴锋</td>
-                            <td>一楼辅导员。</td>
+                            <td>一楼高管。</td>
                             <td>中心圆台缺口处</td>
                         </tr>
                         </tbody>
