--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@ var _hmt = _hmt || [];
                         </div>
                     </article>
                     <ul class="feature-icons">
-                        <li class="fa-envelope">物资经费申请表已经更改为四表合一, "工作餐"项目取消。</li>
-                        <li class="fa-code">多媒体教室不再借用，普通教师借用流程不变。</li>
+                        <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
+                        <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
-                        <li class="fa-code">一些部门上下班时间:<br>
+                        <li class="fa-code">一些部门上下班时间：<br>
                             爱心屋 8:00-20:00<br>
                             勤助部 8:30-21:50<br>
                             学务部 8:30-17:00<br>
@@ -117,24 +117,24 @@ var _hmt = _hmt || [];
                             奖助部 8:30-20:50<br>
                             行政部 8:20-20:20<br>
                         </li>
-                        <li class="fa-book">
                         <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。<br>
                                 具体流程：<br>
                             1. 提前拨打电话：13585835264告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
                             2. 在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！<br>
                             3. 到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可·。切记一定要先找到曹老师，听从老师安排。<br>
                         </li>
-                        <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
-                        <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
-                        <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
                         <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
-                            （0）现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！
+                            （0）现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！<br/>
                             （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。<br>
                             （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
                             （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
                             （4）生活园区每周一借用一楼会议室, 时间调整到11：30-12：30, 此时间段不要外借。 <br>
                             （5）部门抽屉第3层有投影仪线和遥控器，投影仪转接头，收拾会议室记得把转接头一起回收，老师会不定时检查。<br>
-                            （6）每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。</li>
+                            （6）每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。
+                        </li>
+                        <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
+                        <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
+                        <li class="fa-book">水票现在是一楼屏风内的吴映晓老师接手，如果有没有水票可以找老师要，没有水票的话老师可以开具欠条，如果老师不在，部员做好欠条，登记在水票登记表上，并截图发石部。</li>
                         <li class="fa-bolt">文化小站增设了跑步机和划艇机，目前由行政部管理。值班部员请认真阅相关的文件，以免造成工作失误。</li>
                         <li class="fa-users">助管、助研和助教（三助）单据提交到二楼陈恩桃老师旁边的透明箱里。</li>
                         <li class="fa-code">毕业季，综合部办理的主要五张表单中（离校、退学、休学、延长学制、复学）除了离校，其他四张表单都要综合部开完还款证明之后给孙岩老师盖学生处的章。离校的办理：直接到综合部，综合部可以盖离校手续的章，之后到宿管科办理，别往孙岩老师的地方引导。</li>
