--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@ var _hmt = _hmt || [];
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
                         
-                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦! 账号是学号, 密码是111111, 签到请确认连接SSC-SJTU，请不要重复签到, 记得同时在纸质版上签到。</li>
-                        <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛, 场地相关问题请找她, 晚班记得发截图。</li>
-                        <li class="fa-code">部门考核制度已经发布, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。</li>
+                        <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
+                        <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
+                        <li class="fa-code">部门考核制度已经发布，请各位部员做好业务复习，多浏览本业务网站及培训PPT。</li>
                         <li class="fa-bolt">二楼如果有人来问莙政报销的发票，如果苗苗姐（高苗苗）在就找她，她不在就引导到奖助部。</li>
                         <li class="fa-users">毕业生登记表需先检查是否有学指委秘书长林立涛盖章，如果没有请找吴映晓老师盖章，一定要先拦住人检查一下，才能去找孙岩老师。在盖章的时候一定要有老师监督。</li>
                     </ul>
@@ -119,9 +119,9 @@ var _hmt = _hmt || [];
                         </li>
                         <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。<br>
                                 具体流程：<br>
-                            1. 提前拨打电话：13585835264告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
+                            1. 提前拨打电话：13585835264  告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
                             2. 在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！<br>
-                            3. 到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可·。切记一定要先找到曹老师，听从老师安排。<br>
+                            3. 到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可。切记一定要先找到曹老师，听从老师安排。<br>
                         </li>
                         <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
                             （0）现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！<br/>
@@ -470,16 +470,16 @@ var _hmt = _hmt || [];
                 t="新学期，新愿景<br/>祝同学们新学期工作愉快~";
                 break;
             case 2:
-                t="部门网站上线啦!!快去留言吧！";
+                t="部门网站上线啦！！快去留言吧！";
                 break;
             case 3:
-                t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。";
+                t="部门考核将要来临，请各位部员做好业务复习，多浏览本业务网站及培训PPT。";
                 break;
             case 4:
-                t="部门网站上线啦!!快去踩踩吧~"
+                t="部门网站上线啦！！快去踩踩吧~"
                 break;
             case 5:
-                t="部门考核将要来临, 请各位部员做好业务复习, 多浏览本业务网站及培训PPT。"
+                t="部门考核将要来临，请各位部员做好业务复习，多浏览本业务网站及培训PPT。"
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
