--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var _hmt = _hmt || [];
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
                     <ul class="feature-icons">
-                        
+                        <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
                         <li class="fa-code">部门考核制度已经发布，请各位部员做好业务复习，多浏览本业务网站及培训PPT。</li>
@@ -105,6 +105,7 @@ var _hmt = _hmt || [];
                         </div>
                     </article>
                     <ul class="feature-icons">
+                        <li class="fa-users"><a href="documents/一楼大厅电话2018.10.26.xlsx">一楼大厅电话已更新，点击获取。</a></li>
                         <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
                         <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
