--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@ var _hmt = _hmt || [];
                 <header class="major">
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
+                    <article>
+                    	<h4>请二楼各值班部员注意：</h4>
+                    	<p>
+							学生事务中心正于近日举办2018年“感恩于心，反哺于行”上海交通大学资助育人摄影、绘画大赛活动。故即日起至2018年11月11日，部分院系同学可能会将作品及报名表提交至二楼前台值班处，请值班同学留意，若有同学前来提交，麻烦经检查后接收，具体步骤如下：
+						</p>
+						<ol>
+							<li>
+								绘画类：检查报名表信息是否填写完整；<br>
+								检查纸质版绘画作品背面是否用铅笔写上作者姓名及作品名称；<br>
+								将纸质版作品及报名表接收后放在高管裘佳浩工位（14号）上；
+							</li>
+							<li>
+								摄影类：检查报名表信息是否填写完整；<br>
+								将摄影作品拷贝至二楼电脑桌面“摄影作品汇总”文件夹内，并以“作者+作品名称”命名；<br>
+								将报名表接收后放在高管裘佳浩工位（14号）上；</li>
+							<li>
+								如有疑问请及时与裘佳浩学长联系：13262907996。
+							</li>
+						</ol>
+                    </article>
                     <ul class="feature-icons">
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
@@ -97,15 +117,46 @@ var _hmt = _hmt || [];
                 </header>
                 <div class="features">
                     <article>
-                        <a href="images/排班表2018-9-26.png" class="image" target="_blank"><img src="images/排班表2018-9-26.png" alt="" /></a>
+                        <a href="images/排班表2018-10-28.png" class="image" target="_blank"><img src="images/排班表2018-10-28.png" alt="" /></a>
                         <div class="inner">
                             <h4>排班表</h4>
-                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦。由于后期的考核，老部员要耐心为新部员讲解业务要领，新部员要认真学习哦~<br/>
-                                <a style="color:#b6e9dc" href="documents/排班表2018-9-26.pdf" target="_blank">点击获取pdf版本。</a> </p>
+                            <p>最新排班表,请大家看好自己的班次，不要再迟到哦~<br/>
+                                <a style="color:#b6e9dc" href="documents/排班表2018-10-28.pdf" target="_blank">点击获取pdf版本。</a> </p>
                         </div>
                     </article>
+                    <article>
+                        <div class="inner">
+                            <h4>一楼大厅电话</h4>
+                            <p>最新一楼大厅电话<br/>
+                                <a style="color:#b6e9dc" href="documents/一楼大厅电话2018.10.26.xlsx" target="_blank">点击获取Excel表格及徐汇学服电话。</a> </p>
+                        </div>
+                        <a href="images/大厅电话.png" class="image" target="_blank"><img src="images/大厅电话.png" alt="" /></a>
+
+                    </article>
+                    <article>
+                    	<h4><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">借用场地规则</a></h4>
+                    	<ol>
+                            <li>现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！</li>
+                            <li>在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。</li>
+                            <li>通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。</li>
+                            <li>单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。</li>
+                            <li>生活园区每周一借用一楼会议室, 时间调整到11：30-12：30, 此时间段不要外借。 </li>
+                            <li>部门抽屉第3层有投影仪线和遥控器，投影仪转接头，收拾会议室记得把转接头一起回收，老师会不定时检查。</li>
+                            <li>每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。</li>
+                            <li>填写日期要注意填写2019/1/1这种形式，Excel会自动转换格式！！</li>
+                        </ol>
+                    </article>
+                    <article>
+                    	<h4>文件销毁流程</h4>
+                    	<h5>有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。具体流程：</h5>
+                            <ol>
+	                            <li>提前拨打电话：13585835264  告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。</li>
+	                            <li>在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！</li>
+	                            <li>到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可。切记一定要先找到曹老师，听从老师安排。</li>
+	                        </ol>
+                    </article>
                     <ul class="feature-icons">
-                        <li class="fa-users"><a href="documents/一楼大厅电话2018.10.26.xlsx">一楼大厅电话已更新，点击获取。</a></li>
+                    	<li class="fa-users">2018秋行政部最新通讯录，<a href="documents/2018年秋季行政部通讯录 .xlsx" target="_blank">点击获取。</a></li>
                         <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
                         <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
@@ -117,21 +168,6 @@ var _hmt = _hmt || [];
                             综合部 8:20-20:00<br>
                             奖助部 8:30-20:50<br>
                             行政部 8:20-20:20<br>
-                        </li>
-                        <li class="fa-coffee">有过期的文件需要销毁时，先与老师的过期文件放在一起，等积累到一定量时会统一进行销毁。<br>
-                                具体流程：<br>
-                            1. 提前拨打电话：13585835264  告知曹老师要去销毁材料的事情，并约定好销毁时间，切记不要去的太晚，尽量在下午五点之前到达，以免老师下班。<br>
-                            2. 在修车亭处租借三轮车来运输销毁材料，并根据材料数量来决定销毁参与人数，一般为2人；切记材料一定要用箱子密封好，箱子大小尽量不要超过50*60*60，而且只能销毁纸质材料，允许带有夹子，订书钉，但要确保箱子内除此之外无其他物品。路上注意安全！<br>
-                            3. 到达行政B楼后，找到曹老师，在曹老师的安排下，配合保安将材料运至行政B楼西侧地下室即可。切记一定要先找到曹老师，听从老师安排。<br>
-                        </li>
-                        <li class="fa-coffee">借用场地请遵守：<br><a style="color:#b6e9dc" href="documents/场地借用申请表填写规则.docx" target="_blank">点击此处下载场地申请表填写规则</a><br>
-                            （0）现在部门网站正在试用，大家记得同时在网站上登记借用信息！！！<br/>
-                            （1）在登记借用场地时，注意场地借用申请表已经换成了新的，并确认借用时间没有冲突，登记写入表格一定要写办理人（也就是你自己）的姓名。除了最后一班，其他时间有场地借用，登记完也要发截图给徐媛媛。<br>
-                            （2）通过和团工委协商，生活园区团工委借用学服的时候，借用人只能写吕江英，程睿杰，张哲，部门写生活园区团工委。其他的不允许借用会议室。<br>
-                            （3）单周周日晚上6点到10点二楼外场不要外借，双周周日外场8点到9点不要外借。<br>
-                            （4）生活园区每周一借用一楼会议室, 时间调整到11：30-12：30, 此时间段不要外借。 <br>
-                            （5）部门抽屉第3层有投影仪线和遥控器，投影仪转接头，收拾会议室记得把转接头一起回收，老师会不定时检查。<br>
-                            （6）每一班都要检查会议室的锁门情况，有人借要提前帮开门(特别是老师)，没人借的关上门。
                         </li>
                         <li class="fa-code">毕业生登记表和毕业生推荐表是两个不一样的东西，毕业生推荐表找毕业就业，毕业生登记表找吴老师盖章。</li>
                         <li class="fa-cubes">临时困难补助现在请找孙岩老师。</li>
@@ -474,13 +510,13 @@ var _hmt = _hmt || [];
                 t="部门网站上线啦！！快去留言吧！";
                 break;
             case 3:
-                t="部门考核将要来临，请各位部员做好业务复习，多浏览本业务网站及培训PPT。";
+                t="天地交通，乃有行政。";
                 break;
             case 4:
                 t="部门网站上线啦！！快去踩踩吧~"
                 break;
             case 5:
-                t="部门考核将要来临，请各位部员做好业务复习，多浏览本业务网站及培训PPT。"
+                t="天地交通，乃有行政。"
                 break;
         }
         var b=document.getElementById("div2");//根据id获取页面上的一个元素对象
