--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
 						</ol>
                     </article>
                     <ul class="feature-icons">
-
+                        <li class="fa-cubes">大约11.15之前会有一个叫丁菲的人来二楼取证书和折扇（目前放在二楼桌子上）。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
                         <li class="fa-cubes"><a href="xingzhengbu.group" target="_blank">部门网站xingzhengbu.group</a>已经上线啦！账号是学号， 密码是111111， 签到请确认连接SSC-SJTU，请不要重复签到， 记得同时在纸质版上签到。</li>
                         <li class="fa-apple">最新场地负责人已经由曹政更替为徐媛媛，场地相关问题请找她，晚班记得发截图。</li>
@@ -158,6 +158,7 @@ var _hmt = _hmt || [];
                     <ul class="feature-icons">
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
                     	<!--<li class="fa-users">2018秋行政部最新通讯录，<a href="documents/2018年秋季行政部通讯录 .xlsx" target="_blank">点击获取。</a></li>-->
+                        <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
                         <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
                         <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
                         <li class="fa-users">考虑到医保服务在窗口上班时间以外可能有紧急情况，紧急联络电话：朱医生 13641684935</li>
