--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ var _hmt = _hmt || [];
                 <header class="major">
                     <h3>临时业务</h3>
                     <p>临时任务定时更新与删除。</p>
-                    <article>
+                    <!--<article>
                     	<h4>请二楼各值班部员注意：</h4>
                     	<p>
 							学生事务中心正于近日举办2018年“感恩于心，反哺于行”上海交通大学资助育人摄影、绘画大赛活动。故即日起至2018年11月11日，部分院系同学可能会将作品及报名表提交至二楼前台值班处，请值班同学留意，若有同学前来提交，麻烦经检查后接收，具体步骤如下：
@@ -95,7 +95,7 @@ var _hmt = _hmt || [];
 								如有疑问请及时与裘佳浩学长联系：13262907996。
 							</li>
 						</ol>
-                    </article>
+                    </article>-->
                     <ul class="feature-icons">
                         <li class="fa-cubes">大约11.15之前会有一个叫丁菲的人来二楼取证书和折扇（目前放在二楼桌子上）。</li>
                         <li class="fa-book">目前勤助部的电话已坏，无法直接转接，如果需要联系勤助请直接拨打54746013。</li>
@@ -157,7 +157,7 @@ var _hmt = _hmt || [];
                     </article>
                     <ul class="feature-icons">
                         <li class="fa-users">火车票优惠卡充值业务恢复，机器已修好，以后该业务不再由行政部负责，转交给4号窗口（学务部）。</li>
-                    	<!--<li class="fa-users">2018秋行政部最新通讯录，<a href="documents/2018年秋季行政部通讯录 .xlsx" target="_blank">点击获取。</a></li>-->
+                    	<li class="fa-users">学服一楼的门以后向外开(向内开会挡住取号机)，大家以后值班时注意一下大门开向</li>
                         <li class="fa-users">补卡机维护电话：13764299405，维护人员表示别打网络信息中心电话。</li>
                         <li class="fa-envelope">《物资经费申请表》已经更改为四表合一，"工作餐"项目取消。</li>
                         <li class="fa-code">多媒体教室不再借用，普通教室借用流程不变。</li>
